--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
+      - image: circleci/openjdk:11.0.6-jdk-stretch
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -40,3 +40,6 @@ jobs:
 
       # run tests!
       - run: gradle test
+
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      - run: bash <(curl -s https://codecov.io/bash)
